src/objects/etreminder__Hours_Days__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to enter the number of hours and days for My Activities Component</description>
    <fields>
        <fullName>etreminder__Date_Format_MM_d_YYYY__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want the  date in MM-DD-YYYY format</inlineHelpText>
        <label>Date Format(MM-dd-YYYY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>etreminder__Events_Hours__c</fullName>
        <defaultValue>24</defaultValue>
        <description>Enter values between 1 and 96 both inclusive. Values less than 1 will be counted as 24, Values more than 96 will be counted as 96.</description>
        <inlineHelpText>Enter values between 1 and 96 both inclusive. Values less than 1 will be counted as 24, Values more than 96 will be counted as 96.</inlineHelpText>
        <label>Hours for Events</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>etreminder__Task_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enter values between 0 and 3 both inclusive. Values less than 0 will be counted as 0, Values more than 3 will be counted as 3.</description>
        <inlineHelpText>Enter values between 0 and 3 both inclusive. Values less than 0 will be counted as 0, Values more than 3 will be counted as 3.

0 means Today, 
1 means Today and Tomorrow and so on.</inlineHelpText>
        <label>Days for Task</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>etreminder__X12_Hrs_Format__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want the time in 12 Hours format</inlineHelpText>
        <label>12 Hrs Format</label>
        <type>Checkbox</type>
    </fields>
    <label>Hours_Days</label>
</CustomObject>